@startuml agent_layer_detailed
skinparam style strictuml
!pragma layout smetana
title Agent Layer - Detailed Structure

package "Agent Layer" {
    interface "AgentInterface (Protocol)" as agent_if {
        + predict(sdr)
        + learn(sdr, category)
    }

    class "Agent" as agent {
        - brain: Brain
        - mode: str
        + predict(sdr_input): Prediction
        + learn(sdr_input, label): None
        + get_state(): dict
        + reset(): None
    }

    class "Brain" as brain {
        - spatial_pooler: SpatialPooler
        - temporal_memory: TemporalMemory
        + process(sdr): sdr
        + learn(sdr): None
        + get_predictions(): list
    }

    class "HTM" as htm {
        - columns: list
        - synapses: dict
        + activate(sdr): None
        + compute(): sdr
        + learn(): None
    }

    class "SpatialPooler" as spatial_pooler {
        - input_width: int
        - output_width: int
        + compute(sdr): sdr
        + learn(sdr): None
    }

    class "TemporalMemory" as temporal_memory {
        - cells: list
        - connections: dict
        + compute(sdr): None
        + learn(): None
        + get_predictions(): list
    }

    agent ..|> agent_if
    agent --> brain
    brain --> htm
    brain --> spatial_pooler
    brain --> temporal_memory
    htm *-- spatial_pooler
    htm *-- temporal_memory
}

@enduml
